--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -11,3 +11,14 @@ sql:
         emit_json_tags: true
         emit_interface: false
         emit_empty_slices: true
+  - engine: "postgresql"
+    queries: "internal/address/db/queries"
+    schema: "migrations"
+    gen:
+      go:
+        package: "db"
+        out: "internal/address/db"
+        sql_package: "pgx/v5"
+        emit_json_tags: true
+        emit_interface: false
+        emit_empty_slices: true
