--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,18 @@ jobs:
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.2
 
+      - name: Install swag
+        run: go install github.com/swaggo/swag/cmd/swag@latest
+
+      - name: Verify Swagger docs are up-to-date
+        run: |
+          swag init -g cmd/server/main.go -o docs
+          if ! git diff --quiet docs/; then
+            echo "Error: Swagger docs are out of date. Run 'swag init -g cmd/server/main.go -o docs' locally and commit the changes."
+            git diff docs/
+            exit 1
+          fi
+
       - name: Run linting checks
         run: make lint-ci
 
