--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,12 +59,12 @@ jobs:
       - name: Run unit tests
         run: make test-unit-ci
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v5
+      - name: Upload unit coverage
+        uses: actions/upload-artifact@v4
         with:
-          files: ./coverage.out
-          flags: unit
-          token: ${{ secrets.CODECOV_TOKEN }}
+          name: coverage-unit
+          path: coverage.out
+          retention-days: 1
 
   test-integration:
     name: Integration Tests
@@ -115,6 +115,13 @@ jobs:
           DB_SSLMODE: disable
         run: make test-integration-ci
 
+      - name: Upload integration coverage
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-integration
+          path: coverage-integration.out
+          retention-days: 1
+
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -158,3 +165,43 @@ jobs:
           tags: go-test-api:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+  coverage:
+    name: Combined Coverage
+    runs-on: ubuntu-latest
+    needs: [test-unit, test-integration]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+
+      - name: Download unit coverage
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage-unit
+
+      - name: Download integration coverage
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage-integration
+
+      - name: Merge coverage reports
+        run: |
+          go install github.com/wadey/gocovmerge@latest
+          gocovmerge coverage.out coverage-integration.out > coverage-combined.out
+
+      - name: Generate coverage report
+        run: |
+          go tool cover -func=coverage-combined.out > coverage-summary.txt
+          cat coverage-summary.txt
+
+      - name: Upload combined coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          files: ./coverage-combined.out
+          flags: combined
+          token: ${{ secrets.CODECOV_TOKEN }}
