--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -167,7 +167,7 @@ jobs:
           cache-to: type=gha,mode=max
 
   coverage:
-    name: Combined Coverage
+    name: Analyze Code Coverage
     runs-on: ubuntu-latest
     needs: [test-unit, test-integration]
     steps:
