--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -165,6 +165,90 @@ jobs:
           tags: go-test-api:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          load: true
+
+  e2e:
+    name: E2E Tests
+    runs-on: ubuntu-latest
+    needs: docker
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: false
+          tags: go-test-api:${{ github.sha }}
+          cache-from: type=gha
+          load: true
+
+      - name: Start PostgreSQL
+        run: |
+          docker network create test-network
+
+          docker run -d \
+            --name postgres \
+            --network test-network \
+            -e POSTGRES_USER=gouser \
+            -e POSTGRES_PASSWORD=gopassword \
+            -e POSTGRES_DB=gotestdb \
+            postgres:17-alpine
+
+          echo "Waiting for PostgreSQL..."
+          for i in {1..30}; do
+            if docker exec postgres pg_isready -U gouser > /dev/null 2>&1; then
+              echo "PostgreSQL is ready"
+              break
+            fi
+            if [ $i -eq 30 ]; then
+              echo "PostgreSQL failed to start"
+              exit 1
+            fi
+            sleep 1
+          done
+
+      - name: Start API server
+        run: |
+          docker run -d \
+            --name api \
+            --network test-network \
+            -p 8080:8080 \
+            -e ENV=production \
+            -e PORT=8080 \
+            -e DB_HOST=postgres \
+            -e DB_PORT=5432 \
+            -e DB_USER=gouser \
+            -e DB_PASSWORD=gopassword \
+            -e DB_NAME=gotestdb \
+            -e DB_SSLMODE=disable \
+            -e JWT_SECRET=test-secret-for-e2e \
+            go-test-api:${{ github.sha }}
+
+      - name: Run E2E tests
+        env:
+          API_BASE_URL: http://localhost:8080
+        run: make test-e2e-ci
+
+      - name: Show API logs
+        if: always()
+        run: docker logs api
+
+      - name: Cleanup
+        if: always()
+        run: |
+          docker stop api postgres || true
+          docker rm api postgres || true
+          docker network rm test-network || true
 
   coverage:
     name: Analyze Code Coverage
